--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -18,7 +18,7 @@
 	--color-button-text--light: #ffffff;
 
 	--color-text--dark: #1f1f1f;
-	--color-text--light: #aaaaaa;
+	--color-text--light: #6f6f6f;
 	--color-text--white: #ffffff;
 
 	--desktop-width: 1440;
