--- a/styles/base/_section.scss
+++ b/styles/base/_section.scss
@@ -1,15 +1,18 @@
 :root {
+	--section-micro: 5rem;
 	--section-small: 8rem;
 	--section-medium: 16rem;
 	--section-big: 24rem;
 
 	@include below(1200px) {
+		--section-micro: 4rem;
 		--section-small: 6.4rem;
 		--section-medium: 12rem;
 		--section-big: 16rem;
 	}
 
 	@include below(750px) {
+		--section-micro: 2rem;
 		--section-small: 4rem;
 		--section-medium: 8rem;
 		--section-big: 12rem;
@@ -18,6 +21,11 @@
 
 .section--relative {
 	position: relative;
+}
+
+.section--micro--padding {
+	padding-top: var(--section-micro);
+	padding-bottom: var(--section-micro);
 }
 
 .section--small--padding {
