--- a/styles/base/_animations.scss
+++ b/styles/base/_animations.scss
@@ -30,3 +30,23 @@ img {
 		height: 150% !important;
 	}
 }
+
+.lerp-wrap {
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 1.25rem;
+	mix-blend-mode: difference;
+	line-height: 1.1;
+}
+.lerp-wrap span {
+	position:relative;
+	color: #222;
+	width:100px;
+	height:100px;
+	display: inline-flex;
+	justify-content:center;
+	align-items:center;
+	mix-blend-mode: difference;
+	z-index: 0;
+	font-size: clamp(32px, 3vw, 8vw);
+}
