--- a/styles/base/typography/index.scss
+++ b/styles/base/typography/index.scss
@@ -1,11 +1,12 @@
 @import 'type-scale.scss';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600;700;800;900&display=swap');
 
 html {
 	font-size: calc(100vw / var(--desktop-width) * 10);
 }
 
 body {
-	font-family: sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: clamp(16px, 1.6rem, 1.6rem);
 	font-weight: 400;
 	font-style: normal;
