--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -30,4 +30,15 @@
 			}
 		}
 	}
+
+	@media screen and (max-width: 768px) {
+
+		&__item {
+			grid-column: 1/span 12;
+
+			&:nth-of-type(3) {
+				margin-top: 5vh;
+			}
+		}
+	}
 }
