--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -37,6 +37,19 @@
 				opacity: 1;
 			}
 		}
+
+		@media screen and (max-width: 768px) {
+			flex-direction: column-reverse;
+			text-align: center;
+			margin-top: 15vh;
+
+			&__img {
+				// width: 80%;
+				// height: 30vh;
+				// margin-bottom: 5vh;
+				display: none;
+			}
+		}
 	}
 
 	&__shape {
@@ -129,5 +142,24 @@
 				transform: rotate(270deg);
 			}
 		}
+		@media screen and (max-width: 768px) {
+			&__inner {
+				width: 100%;
+
+				&__left {
+					display: none;
+				}
+				&__right {
+					display: none;
+				}
+			}
+
+			&__tags {
+				display: none;
+			}
+		}
+	}
+	@media screen and (max-width: 768px) {
+		height: 80vh;
 	}
 }
