--- a/src/styles/layout/_services.scss
+++ b/src/styles/layout/_services.scss
@@ -80,4 +80,29 @@
 			}
 		}
 	}
+	
+	@media screen and (max-width: 768px) {
+		flex-direction: column-reverse;
+		width: 100%;
+		margin-top: 50vh;
+
+		&__left {
+			width: 100%;
+			min-height: 40vh;
+			max-height: 40vh;
+		}
+		&__content {
+			width: 100%;
+		}
+		&__content__container__service {
+			width: 100%;
+
+			&__title {
+				padding: 1.5vh 5vw;
+			}
+		}
+		&__content__container__service:nth-of-type(2), &__content__container__service:nth-of-type(4), &__content__container__service:nth-of-type(6) {
+			display: none;
+		}
+	}
 }
